--- a/index.html
+++ b/index.html
@@ -46,31 +46,31 @@
     <div class="cardscontainer">
 
         <div class="card">
-            <img src="iphone.jpeg" class="cardimg">
+            <img src="./images/iphone.jpeg" class="cardimg">
             <h4>IPHONE BUDS</h4>
             <p><b>Price:</b>2000/-</p>
             <button class="btn">Add to cart</button>
         </div>
         <div class="card">
-            <img src="kdm.jpeg" class="cardimg">
+            <img src="./images/kdm.jpeg" class="cardimg">
             <h4>KDM BUDS</h4>
             <p><b>Price:</b>1375/-</p>
             <button class="btn">Add to cart</button>
         </div>
         <div class="card">
-            <img src="boat.jpeg" class="cardimg">
+            <img src="./images/boat.jpeg" class="cardimg">
             <h4>BOAT BUDS</h4>
             <p><b>Price:</b>1449/-</p>
             <button class="btn">Add to cart</button>
         </div>
         <div class="card">
-            <img src="realme.jpeg" class="cardimg">
+            <img src="./images/realme.jpeg" class="cardimg">
             <h4>REALME BUDS</h4>
             <p><b>Price:</b>777/-</p>
             <button class="btn">Add to cart</button>
         </div>
         <div class="card">
-            <img src="samsung.jpeg" class="cardimg">
+            <img src="./images/samsung.jpeg" class="cardimg">
             <h4>SAMSUNG BUDS </h4>
             <p><b>Price:</b>1500/-</p>
             <button class="btn">Add to cart</button>
